--- a/vhiop908.html
+++ b/vhiop908.html
@@ -13,21 +13,21 @@
     <div id='id01' class='carouselBackground'>
     <div class='scene'>
         <div class='carousel'>
-            <img src='file:///Users/akashkorram/Documents/webindex/145882.jpg' class="carousel__cell">
-            <img src='file:///Users/akashkorram/Documents/webindex/273547.jpg' class="carousel__cell">
-            <img src='file:///Users/akashkorram/Documents/webindex/332896.jpg' class="carousel__cell">
-            <img src='file:///Users/akashkorram/Documents/webindex/547267.jpg' class="carousel__cell">
-            <img src='file:///Users/akashkorram/Documents/webindex/490725.jpg' class="carousel__cell">
-            <img src='file:///Users/akashkorram/Documents/webindex/875170.jpg' class="carousel__cell">
-            <img src='file:///Users/akashkorram/Documents/webindex/794333.jpg' class="carousel__cell">
-            <img src='file:///Users/akashkorram/Documents/webindex/863001.jpg' class="carousel__cell">
-            <img src='file:///Users/akashkorram/Documents/webindex/496031.jpg' class="carousel__cell">
-            <img src='file:///Users/akashkorram/Documents/webindex/488558.jpg' class="carousel__cell">
-            <img src='file:///Users/akashkorram/Documents/webindex/325117.jpg' class="carousel__cell">
-            <img src='file:///Users/akashkorram/Documents/webindex/1022094.jpg' class="carousel__cell">
-            <img src='file:///Users/akashkorram/Documents/webindex/491597.jpg' class="carousel__cell">
-            <img src='file:///Users/akashkorram/Documents/webindex/855790.jpg' class="carousel__cell">
-            <img src='file:///Users/akashkorram/Documents/webindex/677866.jpg' class="carousel__cell">
+            <img src='Carousel Image\Batman Begins.jpg' class="carousel__cell">
+            <img src='Carousel Image\Black Panther.jpg' class="carousel__cell">
+            <img src='Carousel Image\Blade Runner 2049.jpg' class="carousel__cell">
+            <img src='Carousel Image\Dunkirk.jpg' class="carousel__cell">
+            <img src='Carousel Image\Game of Thrones.jpg' class="carousel__cell">
+            <img src='Carousel Image\Harry Potter.jpg' class="carousel__cell">
+            <img src='Carousel Image\Inception.jpg' class="carousel__cell">
+            <img src='Carousel Image\Interstellar.jpg' class="carousel__cell">
+            <img src='Carousel Image\Man of Steel.jpg' class="carousel__cell">
+            <img src='Carousel Image\Narnia.jpg' class="carousel__cell">
+            <img src='Carousel Image\Pirates of The Caribbean.jpg' class="carousel__cell">
+            <img src='Carousel Image\Sherlock Holmes.jpg' class="carousel__cell">
+            <img src='Carousel Image\The Dark Knight.jpg' class="carousel__cell">
+            <img src='Carousel Image\The Dark Knight Rises.jpg' class="carousel__cell">
+            <img src='Carousel Image\Wonder Woman.jpg' class="carousel__cell">
         </div>
     </div>
     <p>
@@ -56,7 +56,8 @@
     
     <div id='leftbar' class='column col-1'>
         <a id='middleSection' href='https://expertoption.com/?refid=13602&lang=en'><img style='width: 100%' src='https://partner.expertoption.com/bnp/223.gif'></a>
-        <a href="https://iqoption.com/lp/ultimate-trading/en/binary/?aff=51011"><img src="/Users/akashkorram/Documents/vhiop908/IQ Option/en_US/2458/iqoption.gif" width="100%" height="250" /></a>
+        <a id='middleSection' href='https://expertoption.com/?refid=13602&lang=en'><img style='width: 100%' src='https://partner.expertoption.com/bnp/223.gif'></a>
+        <!-- <a href="https://iqoption.com/lp/ultimate-trading/en/binary/?aff=51011"><img src="/Users/akashkorram/Documents/vhiop908/IQ Option/en_US/2458/iqoption.gif" width="100%" height="250" /></a> -->
         <a href='https://expertoption.com/?refid=13602&lang=en'><img style='width: 100%' src='https://partner.expertoption.com/bnp/560.jpg'></a> 
     </div>
 
@@ -75,7 +76,7 @@
         </div>      
       <div class='image'>
           <div class='image-1'>
-              <img src='file://users/Users/akashkorram/Documents/webindex/145882.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
+              <img src='Carousel Image\Batman Begins.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
           </div>
           <div class='image-2'>
               Molossus
@@ -83,7 +84,7 @@
       </div>
       <div class='image'>
           <div class='image-1'>
-              <img src='file://users/Users/akashkorram/Documents/webindex/145882.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
+              <img src='Carousel Image\Batman Begins.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
           </div>
           <div class='image-2'>
               The Batman Theme
@@ -91,7 +92,7 @@
       </div>
       <div class='image'>
           <div class='image-1'>
-              <img src='file://users/Users/akashkorram/Documents/webindex/273547.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
+              <img src='Carousel Image\The Dark Knight.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
           </div>
           <div class='image-2'>
               The Joker Theme
@@ -99,7 +100,7 @@
       </div>
       <div class='image'>
           <div class='image-1'>
-              <img src='file://users/Users/akashkorram/Documents/webindex/332896.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
+              <img src='Carousel Image\The Dark Knight Rises.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
           </div>
           <div class='image-2'>
               Gotham's Reckoning
@@ -107,7 +108,7 @@
       </div>
         <div class='image'>
           <div class='image-1'>
-              <img src='file://users/Users/akashkorram/Documents/webindex/332896.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
+              <img src='Carousel Image\The Dark Knight Rises.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
           </div>
           <div class='image-2'>
               Necessary Evil
@@ -115,7 +116,7 @@
       </div>
         <div class='image'>
           <div class='image-1'>
-              <img src='file://users/Users/akashkorram/Documents/webindex/332896.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
+              <img src='Carousel Image\Batman Begins.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
           </div>
           <div class='image-2'>
               Ra's a Gul
@@ -130,7 +131,7 @@
         </div>        
         <div class='image'>
           <div class='image-1'>
-              <img src='file://users/Users/akashkorram/Documents/webindex/491597.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
+              <img src='Carousel Image\Sherlock Holmes.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
           </div>
           <div class='image-2'>
               Sherlock Holmes
@@ -138,7 +139,7 @@
        </div>
        <div class='image'>
           <div class='image-1'>
-              <img src='file://users/Users/akashkorram/Documents/webindex/875170.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
+              <img src='Carousel Image\Blade Runner 2049.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
           </div>
           <div class='image-2'>
               Blade Runner 2049
@@ -146,7 +147,7 @@
        </div>
        <div class='image'>
           <div class='image-1'>
-              <img src='file://users/Users/akashkorram/Documents/webindex/610318.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
+              <img src='Carousel Image\Inception.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
           </div>
           <div class='image-2'>
               Time
@@ -154,7 +155,7 @@
        </div>
        <div class='image'>
           <div class='image-1'>
-              <img src='file://users/Users/akashkorram/Documents/webindex/794333.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
+              <img src='Carousel Image\Harry Potter.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
           </div>
           <div class='image-2'>
               Harry Potter
@@ -162,7 +163,7 @@
         </div>
         <div class='image'>
           <div class='image-1'>
-              <img src='file://users/Users/akashkorram/Documents/webindex/547267.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
+              <img src='Carousel Image\Interstellar.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
           </div>
           <div class='image-2'>
               Day One
@@ -170,7 +171,7 @@
       </div>
         <div class='image'>
           <div class='image-1'>
-              <img src='file://users/Users/akashkorram/Documents/webindex/863001.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
+              <img src='Carousel Image\Black Panther.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
           </div>
           <div class='image-2'>
               Black Panther
@@ -185,7 +186,7 @@
         </div>        
         <div class='image'>
           <div class='image-1'>
-              <img src='file://users/Users/akashkorram/Documents/webindex/855790.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
+              <img src='Carousel Image\Dunkirk.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
           </div>
           <div class='image-2'>
               Supermarine
@@ -193,7 +194,7 @@
        </div>
        <div class='image'>
           <div class='image-1'>
-              <img src='file://users/Users/akashkorram/Documents/webindex/325117.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
+              <img src='Carousel Image\Game of Thrones.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
           </div>
           <div class='image-2'>
               Game of Thrones
@@ -201,7 +202,7 @@
        </div>
        <div class='image'>
           <div class='image-1'>
-              <img src='file://users/Users/akashkorram/Documents/webindex/1022094.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
+              <img src='Carousel Image\Narnia.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
           </div>
           <div class='image-2'>
               Narnia
@@ -209,7 +210,7 @@
        </div>
        <div class='image'>
           <div class='image-1'>
-              <img src='file://users/Users/akashkorram/Documents/webindex/488558.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
+              <img src='Carousel Image\Man of Steel.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
           </div>
           <div class='image-2'>
               Man of Steel
@@ -217,15 +218,15 @@
         </div>
         <div class='image'>
           <div class='image-1'>
-              <img src='file://users/Users/akashkorram/Documents/webindex/487170.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
+              <img src='Carousel Image\Wonder Woman.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
           </div>
           <div class='image-2'>
-              Electro
+              Wonder Woman
           </div>
       </div>
         <div class='image'>
           <div class='image-1'>
-              <img src='file://users/Users/akashkorram/Documents/webindex/677866.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
+              <img src='Carousel Image\Pirates of The Caribbean.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
           </div>
           <div class='image-2'>
               He's a Pirate
@@ -264,7 +265,7 @@
         <div class='footerColumn'>
            <!--<div class="container-audio">-->
          <div class='image-1'>
-              <img src='file://users/Users/akashkorram/Documents/webindex/677866.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
+              <img src='Carousel Image\Batman Begins.jpg' style='width: 100%;height: 100%;border-radius: 15px;'>
           </div>
           <div class='image-2'>
           <audio style='border-radius: 15px;' controls  loop autoplay>
